[gd_scene load_steps=4 format=3 uid="uid://q42equjtngm5"]

[ext_resource type="Theme" uid="uid://d0kvedaf1dlpf" path="res://themes/default.tres" id="1_21x7y"]
[ext_resource type="Script" path="res://scenes/collection_ui.gd" id="1_uo3ig"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sul4u"]
bg_color = Color(0.0862745, 0.0117647, 0.180392, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0, 0.901961, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="CollectionUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_21x7y")
script = ExtResource("1_uo3ig")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sul4u")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Player Collection"

[node name="TabContainer" type="TabContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="CardCollection" type="GridContainer" parent="PanelContainer/VBoxContainer/TabContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PackCollection" type="GridContainer" parent="PanelContainer/VBoxContainer/TabContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="BoxCollection" type="GridContainer" parent="PanelContainer/VBoxContainer/TabContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
